# satisfactory-server

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  entrypoint.sh
.github/workflows/: publish.yml
