load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

#
# Satisfactory Layer
#

pkg_files(
    name = "satisfactory_files",
    srcs = ["@satisfactory//:files"],
    strip_prefix = "pkg",
    attributes = pkg_attributes(mode = "0755"),  # this applies to all files and is an awful idea
)
pkg_tar(
    name = "satisfactory_layer",
    srcs = [":satisfactory_files"],
    package_dir = "/opt/game",
)

#
# Final Image
#

oci_image(
    name = "image",
    base = "@debian_linux_amd64",
    entrypoint = ["/opt/game/Engine/Binaries/Linux/FactoryServer-Linux-Shipping", "FactoryGame"],
    tars = [
        ":satisfactory_layer",
    ],
)

oci_load(
    name = "image_tarball",
    image = ":image",
    repo_tags = ["satisfactory-server:bazel"],
)

oci_push(
    name = "image_push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/lanofdoom/satisfactory-server",
)
