module(name = "satisfactory_server")

bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_steam")

git_override(
    module_name = "rules_steam",
    commit = "a177cd8197fa887fe4bd33cfe0a54a8adc3e36a0",
    remote = "https://github.com/lanofdoom/rules_steam.git",
)

steam = use_extension("@rules_steam//:steam.bzl", "steam")
steam.app(name = "satisfactory", app = "1690800")
use_repo(steam, "satisfactory")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "debian",
    tag = "bookworm-slim",
    image = "docker.io/library/debian",
    platforms = ["linux/amd64"],
)
use_repo(oci, "debian")